Header add block and try to fix the vertical align

--- a/wpTheme-child/assets/css/header.css
+++ b/wpTheme-child/assets/css/header.css
@@ -10,14 +10,27 @@
 *
 */
 /* Start from the top to the bottom */
+.as_background
+{
+     background-repeat: repeat;
+     background-size:auto;
+}
 .header-img
 {
      background-color: black;
+     overflow: hidden;
+     display: block;
+}
+.header_siteinfo
+{
+     background-color: orange;
+     max-height: 100%;
 }
 .header-img img
 {
-     max-height: 50%;
+     max-height: 75%;
 }
+
 .header-site-logo
 {
      border-radius: 50% !important;
@@ -31,4 +44,5 @@
 {
      font-size: 45px;
      color: #d6d963;
+     font-size: 25px;
 }
